--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="./scripts.js"></script>
     <div class="splash-nav">
       <!-- Hamburger button -->
       <a href="#" class="menu-toggle">
@@ -21,7 +23,7 @@
       <div class="splash-nav-desktop-grid">
         <ul class="splash-nav-primary">
           <!-- Thinkful logo -->
-          <li class="splash-nav-item splash-nav-item__logo">
+          <li class="splash-nav-item__logo">
               <svg xmlns="http://www.w3.org/2000/svg" width="136" height="28">
                 <g fill="#6799ff" fill-rule="evenodd">
                   <path d="M9 20h3V8H3V3h17V0H0v11h9v9z"></path>
