Submenu How It Works now toggles its list items.

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
                 Courses
               </a>
               <nav>
-                <ul>
+                <ul class="splash-nav-courses-list">
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/course-icons/career.gz.svg" alt="Web Development Bootcamp">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/course-icons/career.gz.svg" alt="Web Development Bootcamp" class="item-image">
                       Web Development Bootcamp
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/data-science/data_science.svg" alt="Data Science">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/data-science/data_science.svg" alt="Data Science" class="item-image">
                       Data Science Bootcamp
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/splash-nav/master-a-new-skill.gz.svg" alt="All courses">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/splash-nav/master-a-new-skill.gz.svg" alt="All courses" class="item-image">
                       All courses
                     </a>
                   </li>
@@ -63,28 +63,28 @@
                 How it works
               </a>
               <nav>
-                <ul>
+                <ul class="splash-nav-education-list">
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/mentorship.gz.svg" alt="1-on-1 mentorship">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/mentorship.gz.svg" alt="1-on-1 mentorship" class="item-image">
                       1-on-1 mentorship
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/career-services.gz.svg" alt="Career prep">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/career-services.gz.svg" alt="Career prep" class="item-image">
                       Career prep
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/guarantee.gz.svg" alt="Job guarantee">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/guarantee.gz.svg" alt="Job guarantee" class="item-image">
                       Web Development job guarantee
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
-                    <a href="#">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/jobs-report.gz.svg" alt="Student outcomes">
+                    <a href="#" class="splash-nav-dropdown-link">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/jobs-report.gz.svg" alt="Student outcomes" class="item-image">
                       Student outcomes
                     </a>
                   </li>
@@ -92,12 +92,12 @@
               </nav>
             </li>
             <li class="splash-nav-item">
-              <a href="#">
+              <a href="#" class="splash-nav-item-link">
                 Reviews
               </a>
             </li>
             <li class="splash-nav-item">
-              <a href="#">
+              <a href="#" class="splash-nav-item-link">
                 Pricing
               </a>
             </li>
@@ -105,7 +105,9 @@
         <ul class="splash-nav-secondary">
           <!-- <li class="splash-nav-item splash-nav-separator"></li> -->
           <li class="splash-nav-item">
-              <a href="#">Sign in</a>
+              <a href="#" class="splash-nav-item-link">
+                Sign in
+              </a>
           </li>
         </ul>
       </div>
