Hamburger button now appears only on portrait-mode phones.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="splash-nav">
       <!-- Hamburger button -->
       <a href="#" class="menu-toggle">
-        <div class="hamburger">
+        <div class="hamburger hide-when-large">
           <div class="hamburger-stripe"></div>
           <div class="hamburger-stripe"></div>
           <div class="hamburger-stripe"></div>
