--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Thinkful Navigation</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" media="(min-width: 720px), (orientation: landscape)" href="widescreen-styles.css" />
+    <link rel="stylesheet" media="screen and (orientation: portrait)" href="narrowscreen-styles.css" />
   </head>
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -13,7 +14,7 @@
     <div class="splash-nav">
       <!-- Hamburger button -->
       <a href="#" class="menu-toggle">
-        <div class="hamburger hide-when-large">
+        <div class="hamburger">
           <div class="hamburger-stripe"></div>
           <div class="hamburger-stripe"></div>
           <div class="hamburger-stripe"></div>
@@ -39,19 +40,19 @@
                 <ul class="splash-nav-courses-list">
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/course-icons/career.gz.svg" alt="Web Development Bootcamp" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/course-icons/career.gz.svg" alt="Web Development Bootcamp" class="item-image hide-when-portrait">
                       Web Development Bootcamp
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/data-science/data_science.svg" alt="Data Science" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/data-science/data_science.svg" alt="Data Science" class="item-image hide-when-portrait">
                       Data Science Bootcamp
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/splash-nav/master-a-new-skill.gz.svg" alt="All courses" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/wow-next/splash-nav/master-a-new-skill.gz.svg" alt="All courses" class="item-image hide-when-portrait">
                       All courses
                     </a>
                   </li>
@@ -66,25 +67,25 @@
                 <ul class="splash-nav-education-list">
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/mentorship.gz.svg" alt="1-on-1 mentorship" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/mentorship.gz.svg" alt="1-on-1 mentorship" class="item-image hide-when-portrait">
                       1-on-1 mentorship
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/career-services.gz.svg" alt="Career prep" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/career-services.gz.svg" alt="Career prep" class="item-image hide-when-portrait">
                       Career prep
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/guarantee.gz.svg" alt="Job guarantee" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/guarantee.gz.svg" alt="Job guarantee" class="item-image hide-when-portrait">
                       Web Development job guarantee
                     </a>
                   </li>
                   <li class="splash-nav-dropdown-item">
                     <a href="#" class="splash-nav-dropdown-link">
-                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/jobs-report.gz.svg" alt="Student outcomes" class="item-image">
+                      <img src="http://tf-assets-prod.s3.amazonaws.com/splash/nav-icons/jobs-report.gz.svg" alt="Student outcomes" class="item-image hide-when-portrait">
                       Student outcomes
                     </a>
                   </li>
@@ -103,7 +104,7 @@
             </li>
         </ul>
         <ul class="splash-nav-secondary">
-          <!-- <li class="splash-nav-item splash-nav-separator"></li> -->
+          <li class="splash-nav-separator"></li>
           <li class="splash-nav-item">
               <a href="#" class="splash-nav-item-link">
                 Sign in
